fix new listing method