@@ -2,14 +2,14 @@ package br.com.felipevalboeno.gestao_vagas.modules.candidate.useCases;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
+
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
-import br.com.felipevalboeno.gestao_vagas.modules.candidate.entity.ApplyJobEntity;
+import br.com.felipevalboeno.gestao_vagas.modules.candidate.dto.AppliedJobResponseDTO;
+
 import br.com.felipevalboeno.gestao_vagas.modules.candidate.repository.ApplyJobRepository;
-import br.com.felipevalboeno.gestao_vagas.modules.company.entities.JobEntity;
 
 @Service
 public class ListJobsAppliedByCandidateUseCase {
@@ -17,11 +17,16 @@ public class ListJobsAppliedByCandidateUseCase {
     @Autowired
     private ApplyJobRepository applyJobRepository;
 
-    public List<JobEntity> execute(UUID candidateId) {
-        var applications = this.applyJobRepository.findByCandidateId(candidateId);
+   public List<AppliedJobResponseDTO> execute(UUID candidateId) {
+    var appliedJobs = applyJobRepository.findByCandidateId(candidateId);
 
-        return applications.stream()
-                .map(ApplyJobEntity::getJobEntity) // pega a vaga vinculada
-                .collect(Collectors.toList());
-    }
+    return appliedJobs.stream()
+        .map(apply -> new AppliedJobResponseDTO(
+                apply.getJobEntity().getId(),
+                apply.getJobEntity().getDescription(),
+                apply.getJobEntity().getCompanyEntity().getName(),
+                apply.getCreatedAt()
+        ))
+        .toList();
+}
 }
